--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,18 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# File Upload
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+# File Upload Configuration - Allow large files up to 1GB
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
+spring.servlet.multipart.file-size-threshold=10MB
+spring.servlet.multipart.resolve-lazily=true
+
+# HTTP Request timeout for large files (extended for 1GB files)
+server.tomcat.connection-timeout=600000
+server.tomcat.max-swallow-size=1GB
 
 azure.storage.connection-string=${AZURE_CONNECTION_STRING}
 azure.storage.container-name=valet-demo
+
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.metrics.enabled=true
