--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,14 @@
             <scope>annotationProcessor</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId> <!-- nếu dùng Prometheus -->
+        </dependency>
     </dependencies>
 
     <build>
