--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,41 @@
 spring.application.name=valetKey
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:valetkey
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Disable prepared statement caching to avoid "prepared statement already exists" error
+# This is needed for Supabase Transaction mode connection pooling
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?prepareThreshold=0&preparedStatementCacheQueries=0
+spring.datasource.username=postgres.kelsjjbbiasblwqccpbt
+spring.datasource.password=123456
+
+# Connection Pool Configuration (HikariCP)
+# Transaction mode (port 6543) allows more connections than Session mode
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=15000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.pool-name=ValetKeyHikariPool
+spring.datasource.hikari.auto-commit=true
+
+# JPA/Hibernate Configuration
+spring.jpa.show-sql=false
+# Transaction mode (port 6543) allows more connections, safe to use 'update'
+# Hibernate will create missing tables automatically
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
+
+# Close idle connections
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
+spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and_release_after_transaction
+
+# Force flush and clear to release connections faster
+spring.jpa.properties.hibernate.flush_mode=commit
+spring.jpa.properties.hibernate.jdbc.batch_size=20
 
 # File Upload Configuration - Allow large files up to 1GB
 spring.servlet.multipart.max-file-size=1GB
