--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=valetKey
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-# Disable prepared statement caching to avoid "prepared statement already exists" error
-# This is needed for Supabase Transaction mode connection pooling
-spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?prepareThreshold=0&preparedStatementCacheQueries=0
-spring.datasource.username=postgres.kelsjjbbiasblwqccpbt
-spring.datasource.password=123456
+#spring.datasource.driver-class-name=org.postgresql.Driver
+## Disable prepared statement caching to avoid "prepared statement already exists" error
+## This is needed for Supabase Transaction mode connection pooling
+#spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?prepareThreshold=0&preparedStatementCacheQueries=0
+#spring.datasource.username=postgres.kelsjjbbiasblwqccpbt
+#spring.datasource.password=123456
+
+
+
 
 # Connection Pool Configuration (HikariCP)
 # Transaction mode (port 6543) allows more connections than Session mode
@@ -20,14 +23,14 @@ spring.datasource.hikari.pool-name=ValetKeyHikariPool
 spring.datasource.hikari.auto-commit=true
 
 # JPA/Hibernate Configuration
-spring.jpa.show-sql=false
+#spring.jpa.show-sql=false
 # Transaction mode (port 6543) allows more connections, safe to use 'update'
 # Hibernate will create missing tables automatically
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
 
 # Close idle connections
 spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
@@ -52,3 +55,20 @@ azure.storage.container-name=valet-demo
 
 management.endpoints.web.exposure.include=health,metrics,prometheus
 management.endpoint.metrics.enabled=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=secret
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+# Ch?n Dialect MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Ho?c dùng:
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Tùy ch?n cho tên b?ng/c?t n?u mu?n quote
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
