update: orphanFile service, ratelimit service, monitoring controler and interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,35 +59,34 @@ management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
 management.health.ratelimiters.enabled=true
 
-# ===== CIRCUIT BREAKER CONFIGURATION (Resilience4j) - BEST PRACTICE =====
-# Azure Service Circuit Breaker
+# Resilience4j Circuit Breaker Configuration
 resilience4j.circuitbreaker.instances.azureService.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.azureService.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.azureService.minimumNumberOfCalls=5
 resilience4j.circuitbreaker.instances.azureService.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.azureService.automaticTransitionFromOpenToHalfOpenEnabled=true
-resilience4j.circuitbreaker.instances.azureService.waitDurationInOpenState=30s
+resilience4j.circuitbreaker.instances.azureService.waitDurationInOpenState=60s
 resilience4j.circuitbreaker.instances.azureService.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.azureService.slowCallRateThreshold=50
+resilience4j.circuitbreaker.instances.azureService.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.azureService.slowCallRateThreshold=100
 resilience4j.circuitbreaker.instances.azureService.slowCallDurationThreshold=5s
 
-# ===== RETRY CONFIGURATION (Resilience4j) - BEST PRACTICE =====
-# Azure Service Retry with Exponential Backoff
+# Resilience4j Retry Configuration
 resilience4j.retry.instances.azureService.maxAttempts=3
-resilience4j.retry.instances.azureService.waitDuration=1s
+resilience4j.retry.instances.azureService.waitDuration=2s
 resilience4j.retry.instances.azureService.enableExponentialBackoff=true
 resilience4j.retry.instances.azureService.exponentialBackoffMultiplier=2
-resilience4j.retry.instances.azureService.retryExceptions=java.io.IOException,com.azure.core.exception.AzureException,java.net.SocketTimeoutException
+resilience4j.retry.instances.azureService.retryExceptions=java.io.IOException,java.net.SocketTimeoutException
 resilience4j.retry.instances.azureService.ignoreExceptions=java.lang.IllegalArgumentException
 
-# ===== CACHE CONFIGURATION (Caffeine) - BEST PRACTICE =====
-# Individual cache TTL configured in CacheConfig.java
+# Cache Configuration
 spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=0000
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
