--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,8 +53,39 @@ server.tomcat.max-swallow-size=1GB
 azure.storage.connection-string=${AZURE_CONNECTION_STRING}
 azure.storage.container-name=valet-demo
 
-management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoints.web.exposure.include=health,metrics,prometheus,circuitbreakers,ratelimiters
 management.endpoint.metrics.enabled=true
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+management.health.ratelimiters.enabled=true
+
+# Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.azureService.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.azureService.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.azureService.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.azureService.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.azureService.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.azureService.waitDurationInOpenState=60s
+resilience4j.circuitbreaker.instances.azureService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.azureService.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.azureService.slowCallRateThreshold=100
+resilience4j.circuitbreaker.instances.azureService.slowCallDurationThreshold=5s
+
+# Resilience4j Retry Configuration
+resilience4j.retry.instances.azureService.maxAttempts=3
+resilience4j.retry.instances.azureService.waitDuration=2s
+resilience4j.retry.instances.azureService.enableExponentialBackoff=true
+resilience4j.retry.instances.azureService.exponentialBackoffMultiplier=4
+resilience4j.retry.instances.azureService.retryExceptions=java.lang.Exception
+resilience4j.retry.instances.azureService.ignoreExceptions=java.lang.IllegalArgumentException
+logging.level.io.github.resilience4j.retry=DEBUG
+logging.level.io.github.resilience4j.circuitbreaker=DEBUG
+logging.level.io.github.resilience4j.core=DEBUG
+resilience4j.circuitbreaker.circuitBreakerAspectOrder=1
+resilience4j.retry.retryAspectOrder=2
+
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
@@ -66,9 +97,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Ch?n Dialect MySQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-# Ho?c dùng:
+# Ho?c dï¿½ng:
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Tùy ch?n cho tên b?ng/c?t n?u mu?n quote
+# Tï¿½y ch?n cho tï¿½n b?ng/c?t n?u mu?n quote
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
