--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,7 +91,7 @@ spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=secret
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
