--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 
 services:
   nginx:
-    image: nginx:alpine
+    image: nginx:stable
     container_name: valet-key-nginx
     restart: unless-stopped
     ports:
@@ -23,6 +23,17 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
+  
+  redis:
+    image: redis:7-alpine
+    container_name: valet_key_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
 
 volumes:
   mysql_data:
+  redis_data:
