--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 events {}
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    types_hash_max_size 4096;
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=public_limit:10m rate=50r/m;
@@ -9,7 +12,10 @@ http {
 
     upstream backend {
         least_conn;
-        server host.docker.internal:8080;
+        server host.docker.internal:8080 max_fails=3 fail_timeout=30s;
+        server backend1:8080 max_fails=3 fail_timeout=30s;
+        server backend2:8080 max_fails=3 fail_timeout=30s;
+        server backend3:8080 max_fails=3 fail_timeout=30s;
         keepalive 32;
     }
 
@@ -84,10 +90,47 @@ http {
         location /ws { proxy_pass http://backend; proxy_http_version 1.1; proxy_set_header Upgrade $http_upgrade; proxy_set_header Connection "upgrade"; proxy_set_header Host $host; }
         location /actuator/ { proxy_pass http://backend; proxy_set_header Host $host; }
 
+
+        location /debug {
+            proxy_pass http://backend/debug;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /static/ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+
+
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Cache-Control "public, max-age=31536000, immutable" always;
+            expires 1y;
+            access_log off;
+        }
+
+        location /whoami {
+            proxy_pass http://backend/whoami;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # SPA Fallback
         location / {
             root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
+            try_files $uri /index.html;
         }
+
+
+
+
+
 
         # Optional: trang 429.html đẹp
         error_page 429 /429.html;
@@ -97,3 +140,4 @@ http {
         }
     }
 }
+
