--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,73 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx-error-pages:/usr/share/nginx/html:ro
+      - ./nginx-error-pages:/usr/share/nginx/html/error:ro
       - ./ssl:/etc/nginx/ssl:ro
-      - ./frontend/build:/usr/share/nginx/html:ro
+
+  backend1:
+    build: .
+    container_name: valet-key-backend-1
+    env_file:
+      - .env
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    volumes:
+      - "./target/demo-0.0.1-SNAPSHOT.jar:/app/app.jar"
+      - ./application-prod.properties:/app/application-prod.properties
+    command: >
+      sh -c "java -jar app.jar --spring.config.additional-location=file:/app/ --spring.profiles.active=prod"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    expose:
+      - "8080"
+
+
+
+  backend2:
+    build: .
+    container_name: valet-key-backend-2
+    env_file:
+      - .env
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    volumes:
+      - "./target/demo-0.0.1-SNAPSHOT.jar:/app/app.jar"
+      - ./application-prod.properties:/app/application-prod.properties
+    command: >
+      sh -c "java -jar app.jar --spring.config.additional-location=file:/app/ --spring.profiles.active=prod"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    expose:
+      - "8080"
+
+
+  backend3:
+    build: .
+    container_name: valet-key-backend-3
+    env_file:
+      - .env
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    volumes:
+      - "./target/demo-0.0.1-SNAPSHOT.jar:/app/app.jar"
+      - ./application-prod.properties:/app/application-prod.properties
+    command: >
+      sh -c "java -jar app.jar --spring.config.additional-location=file:/app/ --spring.profiles.active=prod"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    expose:
+      - "8080"
+
+
   db:
     image: mysql:8
     container_name: valet_key_db
@@ -23,6 +87,12 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-psecret" ]
+      interval: 3s
+      timeout: 3s
+      retries: 30
+      start_period: 10s
   
   redis:
     image: redis:7-alpine
