--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=valetKey
-
+server.port=8080
+server.address=0.0.0.0
+spring.application.instance-id=${HOSTNAME:${random.value}}
 #spring.datasource.driver-class-name=org.postgresql.Driver
 ## Disable prepared statement caching to avoid "prepared statement already exists" error
 ## This is needed for Supabase Transaction mode connection pooling
 #spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?prepareThreshold=0&preparedStatementCacheQueries=0
 #spring.datasource.username=postgres.kelsjjbbiasblwqccpbt
 #spring.datasource.password=123456
-
+management.endpoint.health.probes.enabled=true
 
 
 # Connection Pool Configuration (HikariCP)
@@ -92,7 +94,7 @@ spring.cache.redis.use-key-prefix=true
 spring.cache.redis.key-prefix=cache:
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://db:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=secret
 
@@ -109,7 +111,7 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
 
 # Redis Configuration for Bucket4j Rate Limiting
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.password=
 spring.data.redis.database=0
@@ -122,6 +124,20 @@ spring.data.redis.lettuce.pool.max-wait=-1ms
 
 # Spring Session Redis Configuration
 spring.session.store-type=redis
-spring.session.redis.flush-mode=on_save
+spring.session.redis.flush-mode=immediate
 spring.session.redis.namespace=spring:session
 spring.session.timeout=1800
+
+# Cookie configuration for Spring Session
+# For localhost development, use SameSite=Lax (not None which requires HTTPS)
+server.servlet.session.cookie.name=SESSION
+server.servlet.session.cookie.http-only=false
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=lax
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.max-age=1800
+
+# Logging for debugging session
+logging.level.org.springframework.session=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
