--- a/nginx.conf
+++ b/nginx.conf
@@ -10,12 +10,18 @@ http {
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/m;
     limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
 
+    # ✅ LEAST_CONN + REDIS SESSION: Load balancing thông minh + Session sharing
     upstream backend {
+        # Load balancing strategy: Route đến backend có ít connections nhất
         least_conn;
+        
+        # Session được share giữa các backends qua Redis
+        # → Không cần sticky session!
+        
         server host.docker.internal:8080 max_fails=3 fail_timeout=30s;
         server backend1:8080 max_fails=3 fail_timeout=30s;
         server backend2:8080 max_fails=3 fail_timeout=30s;
-        server backend3:8080 max_fails=3 fail_timeout=30s;
+        # server backend3:8080 max_fails=3 fail_timeout=30s;
         keepalive 32;
     }
 
@@ -24,21 +30,36 @@ http {
         server_name localhost;
         client_max_body_size 1024M;
 
+        # ✅ GLOBAL PROXY SETTINGS - Áp dụng cho TẤT CẢ locations
+        # Forward cookies từ client lên backend
+        proxy_set_header Cookie $http_cookie;
+        
+        # Preserve Set-Cookie header từ backend về client
+        proxy_pass_header Set-Cookie;
+        
+        # Standard headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # HTTP/1.1 for keepalive
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+
         # === TẤT CẢ DÙNG limit_req_status 429 ===
         location = /login {
             proxy_request_buffering off;
             limit_req zone=login_limit burst=5 nodelay;
             error_page 503 =429 /429-custom;
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
+        
         location = /429-custom {
             default_type application/json;
             return 429 '{"error":"Too Many Requests","message":"Chỉ được 1 request/phút thôi nhé!"}';
-           }
+        }
+        
         location ~ ^/api/files/upload/ {
             limit_req zone=upload_limit burst=10 nodelay;
             limit_req_status 429;
@@ -46,10 +67,6 @@ http {
             proxy_read_timeout 600s;
             proxy_send_timeout 600s;
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location = /api/async-upload/initiate {
@@ -59,66 +76,46 @@ http {
             proxy_read_timeout 600s;
             proxy_send_timeout 600s;
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location ~ ^/api/public/ {
             limit_req zone=public_limit burst=10 nodelay;
             limit_req_status 429;
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             limit_req_status 429;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /ws { proxy_pass http://backend; proxy_http_version 1.1; proxy_set_header Upgrade $http_upgrade; proxy_set_header Connection "upgrade"; proxy_set_header Host $host; }
-        location /actuator/ { proxy_pass http://backend; proxy_set_header Host $host; }
-
+        location /ws { 
+            proxy_pass http://backend; 
+            proxy_http_version 1.1; 
+            proxy_set_header Upgrade $http_upgrade; 
+            proxy_set_header Connection "upgrade"; 
+        }
+        
+        location /actuator/ { 
+            proxy_pass http://backend; 
+        }
 
         location /debug {
             proxy_pass http://backend/debug;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /whoami {
+            proxy_pass http://backend/whoami;
         }
 
         location /static/ {
             root /usr/share/nginx/html;
             try_files $uri =404;
-
-
             add_header Access-Control-Allow-Origin "*" always;
             add_header Cache-Control "public, max-age=31536000, immutable" always;
             expires 1y;
             access_log off;
-        }
-
-        location /whoami {
-            proxy_pass http://backend/whoami;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # SPA Fallback
@@ -126,11 +123,6 @@ http {
             root /usr/share/nginx/html;
             try_files $uri /index.html;
         }
-
-
-
-
-
 
         # Optional: trang 429.html đẹp
         error_page 429 /429.html;
@@ -140,4 +132,3 @@ http {
         }
     }
 }
-
