--- a/nginx.conf
+++ b/nginx.conf
@@ -109,6 +109,14 @@ http {
             proxy_pass http://backend/whoami;
         }
 
+        # Admin endpoints - Phải đặt TRƯỚC location / để tránh conflict
+        location /admin {
+            limit_req zone=api_limit burst=20 nodelay;
+            limit_req_status 429;
+            proxy_pass http://backend;
+        }
+
+
         location /static/ {
             root /usr/share/nginx/html;
             try_files $uri =404;
