--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
   backend1:
     build: .
     container_name: valet-key-backend-1
+    ports:
+      - "8081:8080"
     env_file:
       - .env
     environment:
@@ -38,6 +40,8 @@ services:
   backend2:
     build: .
     container_name: valet-key-backend-2
+    ports:
+      - "8082:8080"
     env_file:
       - .env
     environment:
@@ -59,6 +63,8 @@ services:
   backend3:
     build: .
     container_name: valet-key-backend-3
+    ports:
+      - "8083:8080"
     env_file:
       - .env
     environment:
