--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ http {
     default_type  application/octet-stream;
     types_hash_max_size 4096;
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
-    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=30r/m;
+    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=300r/m;
     limit_req_zone $binary_remote_addr zone=public_limit:10m rate=50r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/m;
     limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
@@ -52,6 +52,7 @@ http {
             return 429 '{"error":"Too Many Requests","message":"Chỉ được 1 request/phút thôi nhé!"}';
         }
         
+        # Upload endpoints - Phải đặt TRƯỚC location /api/ để match chính xác
         location ~ ^/api/files/upload/ {
             limit_req zone=upload_limit burst=10 nodelay;
             limit_req_status 429;
@@ -59,6 +60,8 @@ http {
             proxy_read_timeout 600s;
             proxy_send_timeout 600s;
             proxy_pass http://backend;
+            # Đảm bảo không bị fallback về location / khi có lỗi
+            proxy_intercept_errors off;
         }
 
         location = /api/async-upload/initiate {
@@ -124,10 +127,11 @@ http {
             try_files $uri /index.html;
         }
 
-        error_page 429 /429.html;
-        location = /429.html {
-            root /usr/share/nginx/html;
-            internal;
+        # Custom 429 error response - Return JSON instead of HTML file
+        error_page 429 = @rate_limit_exceeded;
+        location @rate_limit_exceeded {
+            default_type application/json;
+            return 429 '{"error":"Too Many Requests","message":"Rate limit exceeded. Please try again later."}';
         }
     }
 }
