--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
   backend1:
     build: .
     container_name: valet-key-backend-1
+    ports:
+      - "8081:8080"
     env_file:
       - .env
     environment:
@@ -32,12 +34,15 @@ services:
         condition: service_started
     expose:
       - "8080"
-
+#    extra_hosts:
+#      - "nguyentanstorage.blob.core.windows.net:127.0.0.1"
 
 
   backend2:
     build: .
     container_name: valet-key-backend-2
+    ports:
+      - "8082:8080"
     env_file:
       - .env
     environment:
@@ -54,11 +59,15 @@ services:
         condition: service_started
     expose:
       - "8080"
+#    extra_hosts:
+#      - "nguyentanstorage.blob.core.windows.net:127.0.0.1"
 
 
   backend3:
     build: .
     container_name: valet-key-backend-3
+    ports:
+      - "8083:8080"
     env_file:
       - .env
     environment:
@@ -75,6 +84,8 @@ services:
         condition: service_started
     expose:
       - "8080"
+#    extra_hosts:
+#      - "nguyentanstorage.blob.core.windows.net:127.0.0.1"
 
 
   db:
