--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "http-proxy-middleware": "^2.0.6",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-window": "^2.2.3",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
