--- a/nginx.conf
+++ b/nginx.conf
@@ -4,10 +4,20 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     types_hash_max_size 4096;
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
-    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=300r/m;
-    limit_req_zone $binary_remote_addr zone=public_limit:10m rate=50r/m;
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/m;
+    
+    # Rate limit zones - IP-based global protection
+    # Login: 10r/m (loose hơn Bucket4j để không chặn nhầm)
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;
+    
+    # Upload: 60r/m = 1 req/giây (chặn upload spam)
+    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=60r/m;
+    
+    # Public: 30r/m (chặn scraping bots)
+    limit_req_zone $binary_remote_addr zone=public_limit:10m rate=30r/m;
+    
+    # API: 120r/m = 2 req/giây (balanced cho normal usage)
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=120r/m;
+    
     limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
 
     upstream backend {
@@ -42,7 +52,8 @@ http {
 
         location = /login {
             proxy_request_buffering off;
-            limit_req zone=login_limit burst=5 nodelay;
+            # Burst=3: Cho phép 3 lần thử nhanh, sau đó phải đợi
+            limit_req zone=login_limit burst=3 nodelay;
             error_page 503 =429 /429-custom;
             proxy_pass http://backend;
         }
@@ -54,7 +65,8 @@ http {
         
         # Upload endpoints - Phải đặt TRƯỚC location /api/ để match chính xác
         location ~ ^/api/files/upload/ {
-            limit_req zone=upload_limit burst=10 nodelay;
+            # Burst=5: Giảm burst để tránh spike uploads
+            limit_req zone=upload_limit burst=5 nodelay;
             limit_req_status 429;
             proxy_request_buffering off;
             proxy_read_timeout 600s;
@@ -65,7 +77,8 @@ http {
         }
 
         location = /api/async-upload/initiate {
-            limit_req zone=upload_limit burst=10 nodelay;
+            # Burst=5: Consistent với upload endpoints
+            limit_req zone=upload_limit burst=5 nodelay;
             limit_req_status 429;
             proxy_request_buffering off;
             proxy_read_timeout 600s;
@@ -74,13 +87,15 @@ http {
         }
 
         location ~ ^/api/public/ {
-            limit_req zone=public_limit burst=10 nodelay;
+            # Burst=5: Giảm burst cho public endpoints
+            limit_req zone=public_limit burst=5 nodelay;
             limit_req_status 429;
             proxy_pass http://backend;
         }
 
         location /api/ {
-            limit_req zone=api_limit burst=20 nodelay;
+            # Burst=30: Tăng burst cho API calls bình thường
+            limit_req zone=api_limit burst=30 nodelay;
             limit_req_status 429;
             proxy_pass http://backend;
         }
@@ -106,7 +121,8 @@ http {
 
         # Admin endpoints - Phải đặt TRƯỚC location / để tránh conflict
         location /admin {
-            limit_req zone=api_limit burst=20 nodelay;
+            # Burst=30: Consistent với /api/
+            limit_req zone=api_limit burst=30 nodelay;
             limit_req_status 429;
             proxy_pass http://backend;
         }
